--- a/config.json
+++ b/config.json
@@ -2,11 +2,11 @@
   "authors": [
     "Pollefeys",
     "Jingrui",
-    "Ziming"
+    "Ziming",
+    "Scaramuzza"
   ],
   "categories": [
     "cs.AI",
-    "cs.CG",
     "cs.CV",
     "cs.GR",
     "cs.LG",
